Fix table misalignment when long names are present

--- a/src/components/Kryptos/KryptosRanklist/KryptosRanklist.scss
+++ b/src/components/Kryptos/KryptosRanklist/KryptosRanklist.scss
@@ -12,6 +12,11 @@ table .propic {
   margin-right: 1em;
 }
 
+td {
+  word-wrap: break-word;
+  max-width: 150px;
+}
+
 @media screen and (max-width: $media-width) {
   .table {
     font-size: $font-size-mobile;
